hello-app/charts/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-app-lb
  labels:
    app: docker-app
spec:
  type: LoadBalancer
  ports:
  - port: 8081
    name: http
    targetPort: 8081
  selector:
    app: docker-app
