hello-app/charts/ingress.yaml
  ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: default
spec:
  rules:
  - host: example-11a98987.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: homepage-svc
            port:
              number: 80
        pathType: ImplementationSpecific
